--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
     </dependencies>
 
