--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts1
-spring.datasource.username=student
-spring.datasource.password=chocolatefrog
-spring.jpa.hibernate.ddl-auto=update
-application.avatar.store=/avatars
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+application.avatar.store=./avatar
