--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.hibernate.ddl-auto=validate
 application.avatar.store=./avatar
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+server.port=8080
+logging.level.hogwartsSchool=debug
 #liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
